fix: text align card time in the end

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ main {
     padding: 1.5rem;
     border-radius: 0.75rem;
     max-width: 300px;
-    gap: 1.2rem;
+    gap: 1.5rem;
     margin: 1.2rem;
     box-shadow: 0px 30px 25px rgb(0 0 0 / 0.5);
 }
@@ -64,6 +64,7 @@ main {
 
 .card__time {
     color: var(--Softblue);
+    text-align: end;
 }
 
 
